--- a/demo/reactjs/package.json
+++ b/demo/reactjs/package.json
@@ -11,6 +11,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-promise": "^2.0.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.0.4"
   },
   "scripts": {
